--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-node_modules
+# Dependency directories
+node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating System Files
+.DS_Store
+Thumbs.db
